<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.oshnisoft.bottomnavrealm.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.oshnisoft.bottomnavrealm.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.oshnisoft.bottomnavrealm.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_course"
        android:name="com.oshnisoft.bottomnavrealm.ui.course.CourseFragment"
        android:label="@string/title_course"
        tools:layout="@layout/fragment_course" />
    <fragment
        android:id="@+id/navigation_task"
        android:name="com.oshnisoft.bottomnavrealm.ui.task.TaskFragment"
        android:label="@string/title_task"
        tools:layout="@layout/fragment_task" />
</navigation>